src/index.css
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
@import "tailwindcss";
@import "slick-carousel/slick/slick.css";
@import "slick-carousel/slick/slick-theme.css";

@theme {
  --breakpoint-xs: 30rem;   /* 480px extra pequeño */
  --breakpoint-xsl: 35rem;  /* punto medio ~ 560px (35rem) */
  --breakpoint-sm: 40rem;   /* 640px = 40rem */
  --breakpoint-sml: 44rem;  /* punto medio ~ 700px (44rem) */
  --breakpoint-md: 48rem;   /* 768px */
  --breakpoint-mdl: 56rem;  /* punto medio ~ 900px (56rem) */
  --breakpoint-lg: 64rem;   /* 1024px */
  --breakpoint-xl: 80rem;   /* 1280px */
}

@layer utilities {
  .scrollbar-hide {
    -ms-overflow-style: none;  /* Ocultar barra en IE y Edge */
    scrollbar-width: none;     /* Ocultar barra en Firefox */
  }

  .scrollbar-hide::-webkit-scrollbar {
    display: none;  /* Ocultar barra en Chrome, Safari y Opera */
  }

  .font-geist {
    font-family: 'Geist', sans-serif;
  }

  .text-outline {
    color: transparent;
    -webkit-text-stroke: 1px black;
  }
}

@layer base {
  :root {
    --font-geist: 'Geist', sans-serif;
  }

  body {
    font-family: var(--font-geist);
    color: #1a202c; /* Tailwind's text-gray-900 */
  }

  .bg-primary-d {
    background-color: #EDEDEC;
  }

  .bg-primary-l {
    background-color: #F4F4F3;
  }

  button.default-button {
    display: inline-block;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    background-color: #111827;
    color: #fff;
    font-size: 0.875rem;
    border-radius: 0.375rem;
    transition: background-color 0.2s;
  }

  button.default-button:hover {
    background-color: #374151;
  }
}

/* Animación scroll horizontal */
@keyframes scroll {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-100%);
  }
}

/* Por defecto: mobile (más rápido) */
.animate-scroll {
  animation: scroll 20s linear infinite;
}

/* Pantallas medianas en adelante: más lento */
@media (min-width: 768px) {
  .animate-scroll {
    animation: scroll 40s linear infinite;
  }
}

/* Pantallas grandes en adelante: más lento */
@media (min-width: 1024px) {
  .animate-scroll {
    animation: scroll 60s linear infinite;
  }
}

html, body {
  scroll-behavior: smooth;
  overflow-x: hidden;
  font-weight: 300;
}

/* ✅ Ocultar cursor solo en desktop */
@media (min-width: 640px) {
  html, body {
    cursor: none;
  }
}

